log/build_2022-05-13_18-51-57/xsens_driver/stdout_stderr.log
running egg_info
writing ../../build/xsens_driver/xsens_driver.egg-info/PKG-INFO
writing dependency_links to ../../build/xsens_driver/xsens_driver.egg-info/dependency_links.txt
writing entry points to ../../build/xsens_driver/xsens_driver.egg-info/entry_points.txt
writing requirements to ../../build/xsens_driver/xsens_driver.egg-info/requires.txt
writing top-level names to ../../build/xsens_driver/xsens_driver.egg-info/top_level.txt
reading manifest file '../../build/xsens_driver/xsens_driver.egg-info/SOURCES.txt'
writing manifest file '../../build/xsens_driver/xsens_driver.egg-info/SOURCES.txt'
running build
running build_py
copying xsens_driver/xsens_measure.py -> /app/dev_ws/build/xsens_driver/build/lib/xsens_driver
running install
running install_lib
copying /app/dev_ws/build/xsens_driver/build/lib/xsens_driver/xsens_measure.py -> /app/dev_ws/install/xsens_driver/lib/python3.8/site-packages/xsens_driver
byte-compiling /app/dev_ws/install/xsens_driver/lib/python3.8/site-packages/xsens_driver/xsens_measure.py to xsens_measure.cpython-38.pyc
  File "/app/dev_ws/install/xsens_driver/lib/python3.8/site-packages/xsens_driver/xsens_measure.py", line 278
    print(f"input {self.sta_sw_msg.sync_in} output {self.sta_sw_msg.sync_out})
                                                                             ^
SyntaxError: EOL while scanning string literal

running install_data
running install_egg_info
removing '/app/dev_ws/install/xsens_driver/lib/python3.8/site-packages/xsens_driver-0.0.0-py3.8.egg-info' (and everything under it)
Copying ../../build/xsens_driver/xsens_driver.egg-info to /app/dev_ws/install/xsens_driver/lib/python3.8/site-packages/xsens_driver-0.0.0-py3.8.egg-info
running install_scripts
Installing main script to /app/dev_ws/install/xsens_driver/lib/xsens_driver
writing list of installed files to '/app/dev_ws/build/xsens_driver/install.log'
